syntax = "proto3";

package inventory;

option go_package = "internal/adapters/inbound/grpc;grpc";

service InventoryService {
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc GetProductByID(GetProductRequest) returns (ProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (Empty);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  Category category = 4;
  double price = 5;
  double quantity = 6;
  string unit = 7;
  string created_at = 8;
  string updated_at = 9;
}

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
  string created_at = 4;
  string updated_at = 5;
}

// Request/Response messages
message CreateProductRequest {
  string name = 1;
  string description = 2;
  string category_id = 3;
  double price = 4;
  double quantity = 5;
  string unit = 6;
}

message GetProductRequest {
  string id = 1;
}

message UpdateProductRequest {
  string id = 1;
  optional string name = 2;
  optional string description = 3;
  optional string category_id = 4;
  optional double price = 5;
  optional double quantity = 6;
  optional string unit = 7;
}

message DeleteProductRequest {
  string id = 1;
}

message ListProductsRequest {
  int32 page = 1;
  int32 page_size = 2;
  string sort_by = 3;
}

message ListProductsResponse {
  int32 current_page = 1;
  bool has_next_page = 2;
  int32 page_size = 3;
  int32 total_pages = 4;
  repeated Product products = 5;
}

message ProductResponse {
  Product product = 1;
}

message Empty {}