syntax = "proto3";

import "google/protobuf/timestamp.proto";

package orders;

option go_package = "internal/adapters/inbound/grpc;grpc";

service OrdersService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc GetOrderByID(GetOrderRequest) returns (OrderResponse);
  rpc UpdateOrder(UpdateOrderRequest) returns (OrderResponse);
  rpc DeleteOrder(DeleteOrderRequest) returns (OrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}

enum OrderStatus {
  ORDER_STATUS_PENDING = 0;
  ORDER_STATUS_PROCESSING = 1;
  ORDER_STATUS_COMPLETED = 2;
  ORDER_STATUS_CANCELLED = 3;
  ORDER_STATUS_REFUNDED = 4;
}

message Order {
  string id = 1;
  string user_id = 2;
  string user_name = 3;
  double total_amount = 4;
  OrderStatus  status = 5;
  repeated Item items = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message Item {
  string product_id = 1;
  string product_name = 2;
  double unit_price = 3;
  int32 quantity = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

// Request/Response messages
message CreateOrderRequest {
  string user_id = 1;
  string name = 2;
  repeated OrderItemCreate items = 3;
}

message OrderItemCreate {
  string product_id = 1;
  int32 quantity = 2;
}

message GetOrderRequest {
  string id = 1;
}

message UpdateOrderRequest {
  string id = 1;
  string user_name = 2;
  string status = 3;
}

message DeleteOrderRequest {
  string id = 1;
}

message ListOrdersRequest {
  int32 page = 1;
  int32 page_size = 2;
  string sort_by = 3;
}


message ListOrdersResponse {
  int32 current_page = 1;
  bool has_next_page = 2;
  int32 page_size = 3;
  int32 total_pages = 4;
  repeated Order orders = 5;
}

message OrderResponse {
  Order order = 1;
}

message Empty {}